--- a/bootstrap/clusters-apps-appset.yaml
+++ b/bootstrap/clusters-apps-appset.yaml
@@ -16,13 +16,13 @@ spec:
           values: ['true']
   template:
     metadata:
-      name: 'apps-{{name}}'
+      name: 'apps-zuscu-d006-b207-aks-d1-atldp'
     spec:
       project: default
       source:
         repoURL: https://github.com/it2008018/bootstrapAkuity
         targetRevision: HEAD
-        path: 'clusters2/{{name}}/apps'
+        path: 'clusters2/zuscu-d006-b207-aks-d1-atldp/apps'
         directory:
           recurse: true
       destination:
