--- a/bootstrap/clusters-apps-appset.yaml
+++ b/bootstrap/clusters-apps-appset.yaml
@@ -22,7 +22,7 @@ spec:
       source:
         repoURL: https://github.com/it2008018/bootstrapAkuity
         targetRevision: HEAD
-        path: 'clusters/zuscu-d006-b207-aks-d1-atldp/apps'
+        path: 'clusters/{{name}}/apps'
         directory:
           recurse: true
       destination:
